--- a/certificate.html
+++ b/certificate.html
@@ -20,9 +20,9 @@
 
     <link rel="icon" href="images/csp_logo_favicon.png">
     <style>
-        /* .tparrows {
+        .tparrows {
             display: none !important;
-        } */
+        }
     </style>
 </head>
 
@@ -200,7 +200,7 @@
     <section class="">
         <div class="container">
             <div class="row">
-                <div class="col-md-12">
+               <center> <div class="col-md-12">
                     <div class="col-md-4">
                         <img class="img-responsive" src="images/certificate/certificate_1.png" alt="certificate">
                     </div>
@@ -210,10 +210,10 @@
                     <div class="col-md-4">
                         <img class="img-responsive" src="images/certificate/certificate_3.png" alt="certificate">
                     </div>
-                </div>
+                </div></center>
             </div><br>
             <div class="row">
-                <div class="col-md-12">
+               <center> <div class="col-md-12">
                     <div class="col-md-4">
                         <img class="img-responsive" src="images/certificate/certificate_4.png" alt="certificate">
                     </div>
@@ -223,7 +223,7 @@
                     <div class="col-md-4">
                         <img class="img-responsive" src="images/certificate/certificate_4.png" alt="certificate">
                     </div>
-                </div>
+                </div></center>
             </div>
         </div>
     </section><br>
