--- a/cybersecu.html
+++ b/cybersecu.html
@@ -20,9 +20,9 @@
 
     <link rel="icon" href="images/csp_logo_favicon.png">
     <style>
-        /* .tparrows {
+        .tparrows {
             display: none !important;
-        } */
+        }
     </style>
 </head>
 
@@ -213,7 +213,7 @@
 
     <section class="padding bottom25" style="padding-bottom: 0px;">
         <div class="container">
-            <h2 class="heading bottom25">Market Trends And Projections<span class="divider-left"></span></h2>
+            <h2 class="heading bottom25">Market Trends and Projections<span class="divider-left"></span></h2>
             <div class="row">
                 <div class="col-md-5">
                     <p class="half_space text-justify">Cyber Security Market is Estimated to Grow at a CAGR of 13.5%
