--- a/contact.html
+++ b/contact.html
@@ -20,9 +20,9 @@
 
     <link rel="icon" href="images/csp_logo_favicon.png">
     <style>
-        /* .tparrows {
+        .tparrows {
             display: none !important;
-        } */
+        }
     </style>
 </head>
 
