--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
         <!-- SLIDE  -->
         <li data-transition="fade">
           <!-- MAIN IMAGE -->
-          <img src="images/ai1.jpg" alt="" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
-            class="rev-slidebg">
+          <img src="images/ai1.jpg" alt="banner" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+            class="rev-slidebg" >
           <!-- LAYER NR. 1 -->
           <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
             data-hoffset="['0','0','0','0']" data-y="['326','270','270','150']" data-voffset="['0','0','0','0']"
