--- a/blockchain.html
+++ b/blockchain.html
@@ -273,8 +273,8 @@
                 <div class="col-md-6">
                     <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
                 </div>
-                <div class="col-md-6" style="padding-left: 31px;">
-                    <div class="item bottom25">
+                <div class="col-md-6">
+                    <div class="item" style="padding-top: 7px;">
                         <h4 class="siz">Job Roles</h4>
                         <ul class="ulpad">
                             <li>Backend Developer</li>
