--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <!-- SLIDE  -->
         <li data-transition="fade" data-delay="2000" >
           <!-- MAIN IMAGE -->
-          <img src="images/ai1.jpg" alt="banner" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
+          <img id="baanner1" src="images/ai1.jpg" alt="banner" data-bgposition="center center" data-bgfit="cover" data-bgparallax="10"
             class="rev-slidebg" >
           <!-- LAYER NR. 1 -->
           <!-- <div class="tp-caption tp-resizeme" data-x="['center','center','center','center']"
