--- a/artificial.html
+++ b/artificial.html
@@ -271,7 +271,7 @@
                     <img class="img-responsive" src="images/AIML/skills.jpg" alt="skils">
                 </div>
                 <div class="col-md-6">
-                    <div class="item">
+                    <div class="item" style="padding-top: 7px;">
                         <h4 class="siz">Job Roles</h4>
                         <ul class="ulpad">
                             <li>AI/ML Engineers</li>
