--- a/iot.html
+++ b/iot.html
@@ -269,7 +269,7 @@
                     <img class="img-responsive" alt="skill" src="images/AIML/skills.jpg">
                 </div>
                 <div class="col-md-6">
-                    <div class="item">
+                    <div class="item" style="padding-top: 7px;">
                         <h4 class="siz">Job Roles</h4>
                         <ul class="ulpad">
                             <li>Network Engineer </li>
